# qq-music

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  main.cpp
components/: MenuItem.qml
include/: json_macro.hpp  mainwindow.h  mainwindow.hpp  yuri_log.hpp
include/components/: global_navigation.hpp  music_item_delegate.hpp  nav_menu_item.hpp
include/components/music_item/: component_manager.hpp  render_album.hpp  render_background.hpp  render_cover.hpp  render_index.hpp  render_singer.hpp  render_title.hpp  shared_styles.hpp
include/models/: music_item.hpp  music_item_model.hpp  nav_types.hpp
include/modules/: curl.ixx  global_navigation.ixx  json.ixx  qq_music_types.ixx  yuri_log.ixx
include/ui/: mainwindow.ui  my_likes_page.ui
include/utils/common/: log_macros.hpp  qt_macro.hpp
include/views/: mainwindow.hpp  my_likes_page.hpp
qrc/: init.qrc
qrc/qss/: main.qss  my_likes_page.qss
src/: main.cpp  mainwindow.cpp
src/components/: global_navigation.cpp  music_item_delegate.cpp  nav_menu_item.cpp
src/components/music_item/: component_manager.cpp
src/views/: mainwindow.cpp  my_likes_page.cpp
views/: DiscoverPage.qml  FMPage.qml
